--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "James Block",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
@@ -23,6 +24,7 @@
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "mongoose": "^4.11.3",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
